Bug 311587 - KMail2 crash if trying to opening a "Free/Busy-Time"-EMail
Summary: KMail2 crash if trying to opening a "Free/Busy-Time"-EMail
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: kcalcore (other bugs)
Version First Reported In: 4.9
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-12 18:48 UTC by regi.hops
Modified: 2013-01-14 00:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments
The message that crashed KMail2 (662 bytes, application/x-gzip)
2012-12-13 00:45 UTC, regi.hops
Details

Note You need to log in before you can comment on or make changes to this bug.
Description regi.hops 2012-12-12 18:48:20 UTC
If I try to open an EMail that was sent through KOrganizers option "Send Free/Busy Time Information by E-Mail...", KMail2 crashes.
No matter if I try to open the original message in the local folder "Sent Messages" or the received message in my Inbox - KMail2 crashes.

Reproducible: Always

Steps to Reproduce:
1. Send "Free/Busy Time Information by E-Mail..." via KOrganizer
2. Try to open the E-Mail in the "Sent Messages" Folder
3. Or let the receiver opens the E-Mail in his Inbox

Actual Results:  
KMail2 crashes


Expected Results:  
KMail2 shouldn't crash and do whatever is thought for this kind of E-Mail(?)
Comment 1 Laurent Montel 2012-12-12 21:03:04 UTC
Backtrace ?
Comment 2 regi.hops 2012-12-13 00:26:58 UTC
Application: Kontact (kontact), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f5f20eb2780 (LWP 6491))]

Thread 5 (Thread 0x7f5f084e5700 (LWP 6492)):
#0  0x00007f5f18cb38f4 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f5f1d6a2eb7 in ?? () from /usr/lib64/libQtWebKit.so.4
#2  0x00007f5f1d6a2ee9 in ?? () from /usr/lib64/libQtWebKit.so.4
#3  0x00007f5f18cafe0e in start_thread () from /lib64/libpthread.so.0
#4  0x00007f5f1e4042cd in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7f5f07bcc700 (LWP 6493)):
#0  0x00007f5f1e3fc14f in poll () from /lib64/libc.so.6
#1  0x00007f5f18704684 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f5f187047a4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f5f1eb77cf6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#4  0x00007f5f1eb4885f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#5  0x00007f5f1eb48ae8 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#6  0x00007f5f1ea4afc0 in QThread::exec() () from /usr/lib64/libQtCore.so.4
#7  0x00007f5f1ea4df9c in ?? () from /usr/lib64/libQtCore.so.4
#8  0x00007f5f18cafe0e in start_thread () from /lib64/libpthread.so.0
#9  0x00007f5f1e4042cd in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7f5ebb058700 (LWP 6499)):
#0  0x00007f5f18cb3c61 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f5f1ea4e457 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQtCore.so.4
#2  0x00007f5f1ea41c5f in ?? () from /usr/lib64/libQtCore.so.4
#3  0x00007f5f1ea4df9c in ?? () from /usr/lib64/libQtCore.so.4
#4  0x00007f5f18cafe0e in start_thread () from /lib64/libpthread.so.0
#5  0x00007f5f1e4042cd in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f5eb9e08700 (LWP 6507)):
#0  0x00007f5f18cb3c61 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f5f1ea4e457 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib64/libQtCore.so.4
#2  0x00007f5f1ea41c5f in ?? () from /usr/lib64/libQtCore.so.4
#3  0x00007f5f1ea4df9c in ?? () from /usr/lib64/libQtCore.so.4
#4  0x00007f5f18cafe0e in start_thread () from /lib64/libpthread.so.0
#5  0x00007f5f1e4042cd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f5f20eb2780 (LWP 6491)):
[KCrash Handler]
#5  0x00007f5f1303c6a4 in KCalCore::Incidence::revision() const () from /usr/lib64/libkcalcore.so.4
#6  0x00007f5f061e21ab in ?? () from /usr/lib64/libkcalutils.so.4
#7  0x00007f5f061e3e73 in KCalUtils::IncidenceFormatter::formatICalInvitationNoHtml(QString const&, QSharedPointer<KCalCore::MemoryCalendar> const&, KCalUtils::InvitationFormatterHelper*, QString const&, bool) () from /usr/lib64/libkcalutils.so.4
#8  0x00007f5eb88874b8 in ?? () from /usr/lib64/kde4/messageviewer_bodypartformatter_text_calendar.so
#9  0x00007f5ebe345a0a in MessageViewer::ObjectTreeParser::parseObjectTreeInternal(KMime::Content*) () from /usr/lib64/libmessageviewer.so.4
#10 0x00007f5ebe345f57 in MessageViewer::ObjectTreeParser::stdChildHandling(KMime::Content*) () from /usr/lib64/libmessageviewer.so.4
#11 0x00007f5ebe346372 in MessageViewer::ObjectTreeParser::processMultiPartMixedSubtype(KMime::Content*, MessageViewer::ProcessResult&) () from /usr/lib64/libmessageviewer.so.4
#12 0x00007f5ebe345d3b in MessageViewer::ObjectTreeParser::parseObjectTreeInternal(KMime::Content*) () from /usr/lib64/libmessageviewer.so.4
#13 0x00007f5ebe37b2e0 in ?? () from /usr/lib64/libmessageviewer.so.4
#14 0x00007f5ebe37cbac in ?? () from /usr/lib64/libmessageviewer.so.4
#15 0x00007f5ebe37d0c6 in ?? () from /usr/lib64/libmessageviewer.so.4
#16 0x00007f5ebe37fe1a in ?? () from /usr/lib64/libmessageviewer.so.4
#17 0x00007f5f1eb6039f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#18 0x00007f5f1eb5e31c in QObject::event(QEvent*) () from /usr/lib64/libQtCore.so.4
#19 0x00007f5f1f54974c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#20 0x00007f5f1f54dbca in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#21 0x00007f5f2025c616 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#22 0x00007f5f1eb49b0e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#23 0x00007f5f1eb7a561 in ?? () from /usr/lib64/libQtCore.so.4
#24 0x00007f5f1eb77674 in ?? () from /usr/lib64/libQtCore.so.4
#25 0x00007f5f187043b5 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#26 0x00007f5f187046e8 in ?? () from /usr/lib64/libglib-2.0.so.0
#27 0x00007f5f187047a4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#28 0x00007f5f1eb77cd6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#29 0x00007f5f1f5e9a5e in ?? () from /usr/lib64/libQtGui.so.4
#30 0x00007f5f1eb4885f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#31 0x00007f5f1eb48ae8 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#32 0x00007f5f1eb4d788 in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#33 0x0000000000403649 in ?? ()
#34 0x00007f5f1e341455 in __libc_start_main () from /lib64/libc.so.6
#35 0x0000000000403bb1 in _start ()
Comment 3 regi.hops 2012-12-13 00:45:44 UTC
Created attachment 75807 [details]
The message that crashed KMail2
Comment 4 regi.hops 2012-12-13 00:47:12 UTC
May the E-Mail message is of use, I copied it directly out of the local "Sent Messages"-Folder.
Cheers
Regi
Comment 5 Laurent Montel 2012-12-13 06:48:27 UTC
OK I can reproduce crash when I open mail
How do you ""Send Free/Busy Time Information by E-Mail..."" ?
Regards
Comment 6 Laurent Montel 2012-12-13 06:54:46 UTC
ok found
Comment 7 Laurent Montel 2012-12-13 06:55:23 UTC
in console I have:
kmail2(6905) MessageViewer::MemoryCalendarMemento::slotSearchJobFinished:
kmail2(6905)/kdepimlibs (kcalcore) KCalCore::ICalFormatImpl::Private::readIncidenceBase: The incidence didn't have any UID! Report a bug  to the application that generated this file. 

kmail2(6905)/kdepimlibs (kcalcore) KCalCore::ICalFormat::parseScheduleMessage: 
kcalcore library reported a problem while parsing: 
kmail2(6905)/kdepimlibs (kcalcore) KCalCore::ICalFormat::parseScheduleMessage: "Publish" : "Failed iTIP restrictions for DTSTAMP property. Expected 1 instances of the property and got 0
" 



Backtrace:
Thread 1 (Thread 0x7fa8922b2840 (LWP 6905)):
[KCrash Handler]
#6  0x00007fa88f7e9814 in KCalCore::Incidence::revision (this=0x2f82b60) at /source/kde/kde4/kdepimlibs/kcalcore/incidence.cpp:373
#7  0x00007fa878f0d53b in formatICalInvitationHelper (invitation=..., mCalendar=..., helper=helper@entry=0x7fff3b5a09e0, noHtmlMode=noHtmlMode@entry=true, spec=..., sender=..., outlookCompareStyle=outlookCompareStyle@entry=true) at /source/kde/kde4/kdepimlibs/kcalutils/incidenceformatter.cpp:3133
#8  0x00007fa878f0f213 in KCalUtils::IncidenceFormatter::formatICalInvitationNoHtml (invitation=..., calendar=..., helper=0x7fff3b5a09e0, sender=..., outlookCompareStyle=true) at /source/kde/kde4/kdepimlibs/kcalutils/incidenceformatter.cpp:3264
#9  0x00007fa81ec8a1e1 in (anonymous namespace)::Formatter::format (this=0x3061200, bodyPart=0x7fff3b5a0b50, writer=0x2a83c00, asyncResultObserver=0x2988ba0) at /source/kde/kde4/kdepim/plugins/messageviewer/bodypartformatter/text_calendar.cpp:257
#10 0x00007fa8843f3047 in MessageViewer::ObjectTreeParser::parseObjectTreeInternal (this=0x7fff3b5a0ce0, node=0x2fe8860) at /source/kde/kde4/kdepim/messageviewer/objecttreeparser.cpp:328
#11 0x00007fa8843fabae in MessageViewer::ObjectTreeParser::stdChildHandling (this=0x7fff3b5a0fc0, child=0x2fb2d20) at /source/kde/kde4/kdepim/messageviewer/objecttreeparser.cpp:1458
#12 0x00007fa8843fae69 in MessageViewer::ObjectTreeParser::processMultiPartMixedSubtype (this=0x7fff3b5a0fc0, node=0x30fc190) at /source/kde/kde4/kdepim/messageviewer/objecttreeparser.cpp:1491
#13 0x00007fa8843a4c91 in (anonymous namespace)::MultiPartMixedBodyPartFormatter::process (this=0x28a8790, otp=0x7fff3b5a0fc0, node=0x30fc190, result=...) at /source/kde/kde4/kdepim/messageviewer/bodypartformatter.cpp:119
Comment 8 Laurent Montel 2012-12-13 07:03:51 UTC
It's a crash for korganizer developper.
Will inform him
Comment 9 Allen Winter 2012-12-20 21:08:12 UTC
the crash happens in kcalcore, so reassigning to kdepimlibs
Comment 10 Allen Winter 2013-01-14 00:20:28 UTC
Git commit c8919b8a84e3a0d62fc3abdd5d0453610add54fe by Allen Winter.
Committed on 14/01/2013 at 01:18.
Pushed by winterz into branch 'KDE/4.10'.

FreeBusy incidences don't have revisions or attachments.
Be aware of that when htmlifying FreeBusy invitations to avoid crashes.
FIXED-IN: 4.10

M  +17   -5    kcalutils/incidenceformatter.cpp

http://commits.kde.org/kdepimlibs/c8919b8a84e3a0d62fc3abdd5d0453610add54fe