FreeBusy incidences don't have revisions or attachments. Be aware of that when htmlifying FreeBusy invitations to avoid crashes.

BUG: 311587
FIXED-IN: 4.10